--- a/webpack-react/package.json
+++ b/webpack-react/package.json
@@ -1,43 +1,70 @@
 {
-  "name": "webpack-react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js --env env=prod",
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20.14.13",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "clean-webpack-plugin": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^7.1.2",
-    "cssnano": "^7.0.4",
-    "html-webpack-plugin": "^5.6.0",
-    "merge": "^2.1.1",
-    "mini-css-extract-plugin": "^2.9.0",
-    "postcss-loader": "^8.1.1",
-    "react-refresh": "^0.14.2",
-    "sass": "^1.77.8",
-    "sass-loader": "^16.0.0",
-    "style-loader": "^4.0.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+	"name": "webpack-react",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js --env env=prod",
+		"start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+		"stylelint": "stylelint \"src/**/*.{css,scss}\"",
+		"stylelint:fix": "stylelint \"src/**/*.{css,scss}\" --fix",
+		"lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+		"format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --ignore-path ./.prettierignore",
+		"check": "npm run stylelint:fix && npm run lint && npm run format",
+		"commit": "npm run check && cz"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+		"@svgr/webpack": "^8.1.0",
+		"@types/node": "^20.14.13",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"autoprefixer": "^10.4.19",
+		"clean-webpack-plugin": "^4.0.0",
+		"commitizen": "^4.3.0",
+		"cross-env": "^7.0.3",
+		"css-loader": "^7.1.2",
+		"cssnano": "^7.0.4",
+		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsx-a11y": "^6.9.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-react": "^7.35.0",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"html-webpack-plugin": "^5.6.0",
+		"merge": "^2.1.1",
+		"mini-css-extract-plugin": "^2.9.0",
+		"postcss-loader": "^8.1.1",
+		"prettier": "^3.3.3",
+		"react-refresh": "^0.14.2",
+		"sass": "^1.77.8",
+		"sass-loader": "^16.0.0",
+		"style-loader": "^4.0.0",
+		"stylelint": "^16.8.1",
+		"stylelint-config-standard": "^36.0.1",
+		"stylelint-order": "^6.0.4",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.5.4",
+		"url-loader": "^4.1.1",
+		"webpack": "^5.93.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1"
+	},
+	"dependencies": {
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	}
 }
